--- a/api/api/Properties/launchSettings.json
+++ b/api/api/Properties/launchSettings.json
@@ -24,11 +24,10 @@
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/weatherforecast",
       "environmentVariables": {
-        "ASPNETCORE_HTTPS_PORTS": "8081",
         "ASPNETCORE_HTTP_PORTS": "8080"
       },
-      "publishAllPorts": true,
-      "useSSL": true
+      "publishAllPorts": true
+     
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
