add delete endpoint

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,20 @@
-
+[Bb]in/
+[Oo]bj/
 *.vsidx
+api/api/obj/Debug/net8.0/refint/api.dll
+api/api/obj/Debug/net8.0/ref/api.dll
+api/api/obj/Debug/net8.0/apphost.exe
+api/api/obj/Debug/net8.0/ApiEndpoints.json
+api/api/obj/Debug/net8.0/api.sourcelink.json
+api/api/obj/Debug/net8.0/api.pdb
+api/api/obj/Debug/net8.0/api.dll
+api/api/obj/Debug/net8.0/api.AssemblyInfoInputs.cache
+api/api/obj/Debug/net8.0/api.AssemblyInfo.cs
+api/api/.vs/api/v17/.futdcache.v2
+api/api/.vs/api/v17/.suo
+api/api/.vs/api/v17/DocumentLayout.json
+api/api/.vs/ProjectEvaluation/api.metadata.v7.bin
+api/api/.vs/ProjectEvaluation/api.projects.v7.bin
+api/api/bin/Debug/net8.0/api.dll
+api/api/bin/Debug/net8.0/api.exe
+api/api/bin/Debug/net8.0/api.pdb
