--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,8 @@ api/api/.vs/ProjectEvaluation/api.projects.v7.bin
 api/api/bin/Debug/net8.0/api.dll
 api/api/bin/Debug/net8.0/api.exe
 api/api/bin/Debug/net8.0/api.pdb
+api/api/.vs/api/v17/.suo
+api/api/.vs/api/v17/DocumentLayout.json
+api/api/obj/Debug/net8.0/api.assets.cache
+api/api/.vs/api/v17/DocumentLayout.json
+api/api/.vs/api/v17/.suo
